--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ php:
   - hhvm
 before script: 
   - composer install
-script: phpunit testTravisBrokenExample.php
+script: phpunit test/testTravisBrokenExample.php
