--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
 
   "autoload": {
     "psr-4": {
-       "RogerCreasy\\travis-broken-example\\": "src"
+       "RogerCreasy\\travisbrokenexample\\": "src"
     }
   },
   "minimum-stability": "dev"
