--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ php:
   - 5.5
   - 5.4
   - hhvm
-install:
-  - composer install --no-interaction
+before_script:
+  - composer update --no-interaction
 script: phpunit test/testTravisBrokenExample.php
